--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main id="main">
         <section id="about">
             <div id="my-image">
-                <img src="image/my-image.jpeg">
+                <img src="my-image.jpeg">
             </div>
             <div id="about-para">
                 <p>
@@ -162,28 +162,28 @@
             <div class="timeline">
                 <div class="timeline-box">
                     <div class="content">
-                        <img src="image/leetcode_logo.png">
+                        <img src="leetcode_logo.png">
                         <h4>LEETCODE</h4>
                         <p>&#11088; &#11088; &#11088; </p>
                     </div>
                 </div>
                 <div class="timeline-box">
                     <div class="content">
-                        <img src="image/codechef_logo.png">
+                        <img src="codechef_logo.png">
                         <h4>CODECHEF</h4>
                         <p>&#11088; &#11088; &#11088;</p>
                     </div>
                 </div>
                 <div class="timeline-box">
                     <div class="content">
-                        <img src="image/HackerEarth_logo.png">
+                        <img src="HackerEarth_logo.png">
                         <h4>HACKEREARTH</h4>
                         <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                     </div>
                 </div>
                 <div class="timeline-box">
                     <div class="content">
-                        <img src="image/HackerRank_logo.png">
+                        <img src="HackerRank_logo.png">
                         <h4>HACKERRANK</h4>
                         <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                     </div>
@@ -209,7 +209,7 @@
             <div class="timeline">
                 <div class="timeline-box" style="min-height: 300px;">
                     <div class="content">
-                        <img src="image/rkmgec_logo.jpg">
+                        <img src="rkmgec_logo.jpg">
                         <div style="width:70%;float: right;">
                             <h3>B.Tech ( Bachelor of Technology )</h3>
                             <h4>CGPA : 9.00</h4>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="timeline-box" style="min-height: 300px;">
                     <div class="content">
-                        <img src="image/sekendarpur_logo.jpg">
+                        <img src="sekendarpur_logo.jpg">
                         <div style="width:70%;float: right;">
                             <h3>Higher Secondary</h3>
                             <h4>PERCENT : 89.8 %</h4>
