--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="skill-progress">
                     <div class="eighty-five-percent mb-blue">
                         <div class="skill-name">
-                            <span>c++</span>
+                            <span>C++</span>
                         </div>
 
                     </div>
@@ -108,7 +108,7 @@
                 <div class="skill-progress">
                     <div class="sixty-five-percent mb-green">
                         <div class="skill-name">
-                            <span>java</span>
+                            <span>JAVA</span>
                         </div>
 
                     </div>
@@ -116,7 +116,7 @@
                 <div class="skill-progress">
                     <div class="fifty-five-percent mb-red">
                         <div class="skill-name">
-                            <span>dsa</span>
+                            <span>DSA</span>
                         </div>
 
                     </div>
@@ -124,7 +124,7 @@
                 <div class="skill-progress">
                     <div class="eighty-percent mb-green">
                         <div class="skill-name">
-                            <span>javascript</span>
+                            <span>JAVASCRIPT</span>
                         </div>
 
                     </div>
@@ -132,7 +132,7 @@
                 <div class="skill-progress">
                     <div class="fifty-five-percent mb-pink">
                         <div class="skill-name">
-                            <span>ml</span>
+                            <span>MACHINE LEARNING</span>
                         </div>
 
                     </div>
@@ -140,7 +140,7 @@
                 <div class="skill-progress">
                     <div class="sixty-five-percent mb-green">
                         <div class="skill-name">
-                            <span>python</span>
+                            <span>PYTHON</span>
                         </div>
 
                     </div>
