--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="skill-progress">
                     <div class="fifty-five-percent mb-pink">
                         <div class="skill-name">
-                            <span>MACHINE LEARNING</span>
+                            <span>ML</span>
                         </div>
 
                     </div>
